--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,10 @@
 .tracking-in-contract {
-	-webkit-animation: tracking-in-contract 0.8s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
-	        animation: tracking-in-contract 0.8s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+	/* -webkit-animation: tracking-in-contract 0.8s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+	        animation: tracking-in-contract 0.8s cubic-bezier(0.215, 0.610, 0.355, 1.000) both; */
+        
+	        animation: tracking-in-contract 0.6s 0.6s  both  ease-in-out;
 }
-@-webkit-keyframes tracking-in-contract {
+/* @-webkit-keyframes tracking-in-contract {
   0% {
     letter-spacing: 1em;
     opacity: 0;
@@ -14,17 +16,20 @@
     letter-spacing: normal;
     opacity: 1;
   }
-}
+} */
 @keyframes tracking-in-contract {
   0% {
-    letter-spacing: 1em;
+    /* letter-spacing: 1em; */
     opacity: 0;
   }
   40% {
+    opacity: 0.4;
+  }
+  60% {
     opacity: 0.6;
   }
   100% {
-    letter-spacing: normal;
+    /* letter-spacing: normal; */
     opacity: 1;
   }
 }
